2013-12-16  Tao Liu  <vladimir.liu@gmail.com>
	Version 1.4.3

	* File/folder name changes

	Executable script has been renamed as 'macs' to be consistent with
	'macs2' in MACS2.

	macs14 -> macs

	MACS library path has been renamed as 'MACS1' to be consistent
	with 'MACS2' in MACS2.

	MACS14 -> MACS1

2011-12-07  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.2

	* Default options changes

	1. --to-small is replaced by --to-large. Now the default behavior
	is to scale down larger sample. In this way, results would be more
	specific, because noises would increase slower than real enriched
	regions.

	2. --off-auto is replaced by --on-auto. Now the auto-fix of
	modeled fragment size is turned off by default. Previously, if the
	d from MACS is smaller than 2 times of read length, MACS will use
	2 times of --shiftsize setting instead. This may lead to unwanted
	result, especially when sequencing read length gets longer. It has
	been turned off by default now, if you still want this feature,
	please use '--off-auto' and '--shiftsize' with desired number.

	3. --keep-dup is by default 1. To keep only one tag per position,
	always performs better than keep multiple, from our internal tests.

	* PeakSplitter for bedGraph output as well

	* SAMParser and BAMParser fixed for paired-end sequencing
	data. Thanks to Benjamin Schiller!

2011-06-21  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.1

	* PeakDetect.py

	Fix a bug, correctly assign lambda_bg while --to-small is
	set. Thanks Junya Seo!

	Fix a bug to allow minus strand containing NO tags at all. Thank
	Vaibhav Jain for bringing up this problem!

	Correctly use user-specified tag size while -s/--tsize is
	set. Thank Shunmin He for the bug report!

2011-06-19  Tao Liu  <taoliu@jimmy.harvard.edu>
	Version 1.4.0

	* Parser.py

	Change all split() to split('\t'), so that MACS now split columns
	in input reads alignment file only using tab.

	* elandexport2bed.py, elandmulti2bed.py, elandresult2bed.py, sam2bed.py
