@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# Time-stamp: <2013-12-16 15:03:24 Tao Liu>
+# Time-stamp: <2013-12-16 15:22:16 Tao Liu>
 
 """Description: MACS 1.4 main executable
 
@@ -234,6 +234,9 @@ Example: %prog -t ChIP.bam -c Control.bam -f BAM -g h -n test -w --call-subpeaks
                          help="ChIP-seq treatment files. REQUIRED. When ELANDMULTIPET is selected, you must provide two files separated by comma, e.g. s_1_1_eland_multi.txt,s_1_2_eland_multi.txt")
     optparser.add_option("-c","--control",dest="cfile",type="string",
                          help="Control files. When ELANDMULTIPET is selected, you must provide two files separated by comma, e.g. s_2_1_eland_multi.txt,s_2_2_eland_multi.txt")
+    optparser.add_option("-O","--outdir",dest="outdir",type="string",
+                         help="Optional output directory name. DEFAULT: current working directory \".\"",
+                         default=".")
     optparser.add_option("-n","--name",dest="name",type="string",
                          help="Experiment name, which will be used to generate output file names. DEFAULT: \"NA\"",
                          default="NA")
