@@ -1,4 +1,4 @@
-# Time-stamp: <2011-02-25 22:22:34 Tao Liu>
+# Time-stamp: <2013-12-16 15:14:13 Tao Liu>
 
 """Module Description
 
@@ -21,8 +21,8 @@ import os
 import sys
 import re
 import shutil
-from MACS14.IO.FeatIO import WigTrackI
-from MACS14.IO.BinKeeper import BinKeeperI
+from MACS1.IO.FeatIO import WigTrackI
+from MACS1.IO.BinKeeper import BinKeeperI
 
 import time
 # ------------------------------------
